--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,14 @@
-- link: /updates.html
-  name: Latest Updates
 - link: /
   name: Home
 - link: /about.html
   name: About
 - link: /partnerships.html
   name: Partnerships
+- link: /current.html
+  name: Current Events
 - link: /give.html
   name: <b>$</b> Give
 - link: /contact.html
   name: Contact
-- link: /terms.html
-  name: Terms
-- link: /privacy.html
-  name: Privacy
+- link: /legal.html
+  name: Legal
