--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,42 @@
-# Logs and databases #
-######################
-*.log
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Jekyll #
-##########
-_site
-.sass-cache
-.jekyll-cache/
-.jekyll-metadata
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
-# Mac Development #
-###################
-.DS_STORE
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
+.DS_Store
+Thumbs.db
