--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["favicon.ico", "src/assets/", "src/assets/videos/"],
+            "assets": ["src/favicon.ico", "src/assets/", "src/assets/videos/"],
             "styles": ["src/styles.scss"],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"],
             "server": "src/main.server.ts",
@@ -80,7 +80,7 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["favicon.ico", "src/assets/", "src/assets/videos/"],
+            "assets": ["src/favicon.ico", "src/assets/", "src/assets/videos/"],
             "styles": ["src/styles.scss"],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
           }
